Set up the counter and timer display

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-12 question-count-down-clock"></div>
+      </div>
+      <div class="row">
         <div id="question-text-holder" class="col-12 text-center"></div>
       </div>
       <div class="row">
@@ -56,6 +59,13 @@
         <div id="answer-holder-3" class="col-12 answer-holder"></div>
       </div>
       <div class="row"><div class="col-12 answer-responder-holder"></div></div>
+      <div class="row"><div class="col-12 score-board" id="correct"></div></div>
+      <div class="row">
+        <div class="col-12 score-board" id="incorrect"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 score-board" id="out-of-time"></div>
+      </div>
     </div>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
