--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
         <div id="answer-holder-3" class="col-12 answer-holder"></div>
       </div>
       <div class="row"><div class="col-12 answer-responder-holder"></div></div>
-      <div class="row"><div class="col-12 score-board" id="correct"></div></div>
       <div class="row">
-        <div class="col-12 score-board" id="incorrect"></div>
-      </div>
-      <div class="row">
-        <div class="col-12 score-board" id="out-of-time"></div>
+        <div class="col-12 score-board"></div>
       </div>
     </div>
     <!-- JQuery -->
