Started on simple styling

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
-    <div class="container h-100 mt-2">
+    <div class="container h-100 mt-5 py-4">
       <div class="row">
         <div class="col-12">
           <h1 class="text-center">JAbby Trivia</h1>
@@ -41,22 +46,34 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 question-count-down-clock"></div>
+        <div class="col-12 question-count-down-clock text-center"></div>
       </div>
       <div class="row">
         <div id="question-text-holder" class="col-12 text-center"></div>
       </div>
       <div class="row">
-        <div id="answer-holder-0" class="col-12 answer-holder"></div>
+        <div
+          id="answer-holder-0"
+          class="col-12 answer-holder text-center"
+        ></div>
       </div>
       <div class="row">
-        <div id="answer-holder-1" class="col-12 answer-holder"></div>
+        <div
+          id="answer-holder-1"
+          class="col-12 answer-holder text-center"
+        ></div>
       </div>
       <div class="row">
-        <div id="answer-holder-2" class="col-12 answer-holder"></div>
+        <div
+          id="answer-holder-2"
+          class="col-12 answer-holder text-center"
+        ></div>
       </div>
       <div class="row">
-        <div id="answer-holder-3" class="col-12 answer-holder"></div>
+        <div
+          id="answer-holder-3"
+          class="col-12 answer-holder text-center"
+        ></div>
       </div>
       <div class="row"><div class="col-12 answer-responder-holder"></div></div>
       <div class="row">
