--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container h-100 mt-5 py-4">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 pb-4">
           <h1 class="text-center">JAbby Trivia</h1>
         </div>
       </div>
@@ -75,7 +75,9 @@
           class="col-12 answer-holder text-center"
         ></div>
       </div>
-      <div class="row"><div class="col-12 answer-responder-holder"></div></div>
+      <div class="row">
+        <div class="col-12 answer-responder-holder text-center"></div>
+      </div>
       <div class="row">
         <div class="col-12 score-board"></div>
       </div>
