--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-12 answer-responder-holder text-center"></div>
       </div>
       <div class="row">
-        <div class="col-12 score-board"></div>
+        <div class="col-12 score-board text-center"></div>
       </div>
     </div>
     <!-- JQuery -->
