Attempting to fix links

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Questions Data -->
-    <script src="/assets/javascript/questions.js"></script>
+    <script src="./assets/javascript/questions.js"></script>
     <!-- Main Javscript -->
-    <script src="/assets/javascript/apps.js"></script>
+    <script src="./assets/javascript/apps.js"></script>
   </body>
 </html>
